--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
-../.DS_Store
+/.DS_Store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -14,7 +14,6 @@ __pycache__/
 env/
 build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
